[package]
name = "advent-of-code-2023-01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "advent-of-code-2023-01"
path = "./main.rs"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
